# nilbox

./: .github  .gitignore  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-qemu-binaries.yml  dco.yml
apps/nilbox/: index.html  package.json  vite.config.ts
apps/nilbox-vmm/: Makefile  Package.swift  README.md
apps/nilbox-vmm/Sources/nilbox-vmm/: VsockRelay.swift
apps/nilbox/public/guides/: Set-api-token.json  goto-store.json  index.json  map-directory.json  oauth-openai.json  start-shell.json  start-vm.json
apps/nilbox/src/: App.tsx  main.tsx
apps/nilbox/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
apps/nilbox/src-tauri/capabilities/: default.json
apps/nilbox/src-tauri/icons/: icon.icns
apps/nilbox/src-tauri/src/: main.rs
apps/nilbox/src-tauri/src/commands/: admin_webview.rs  api_key.rs  audit.rs  blocklist_log.rs  domain.rs  env_injection.rs  file_mapping.rs  function_key.rs  mcp.rs  mod.rs  monitoring.rs  notify.rs  port_mapping.rs  recovery.rs  shell.rs  ssh_gateway.rs  store.rs  token_usage.rs  update.rs  vm.rs  whpx_windows.rs
apps/nilbox/src/components/: ActivityBar.tsx  BottomDrawer.tsx  SidePanel.tsx  StatusBar.tsx  TitleBar.tsx  VmContextBar.tsx
apps/nilbox/src/components/guide/: GuideContext.tsx  GuideEngine.ts  GuideOverlay.tsx  GuideRecorder.tsx  ScenarioList.tsx  SpeechBubble.tsx  generateSelector.ts
apps/nilbox/src/components/screens/: AdminUI.tsx  Credentials.tsx  CustomLlmProviderEditor.tsx  CustomOAuthEditor.tsx  Home.tsx  Mappings.tsx  ResizeDisk.tsx  Settings.tsx  SetupGuide.tsx  Shell.tsx  Statistics.tsx  Store.tsx  VmManager.tsx
apps/nilbox/src/i18n/: i18next.d.ts  index.ts
apps/nilbox/src/i18n/locales/: en.ts  ko.ts
apps/nilbox/src/lib/: oauthDetect.ts  tauri.ts  useVmMetricsStream.ts
apps/nilbox/src/styles/: global.css
crates/nilbox-blocklist/: Cargo.toml  README.md
crates/nilbox-blocklist/src/: bloom.rs  builder.rs  format.rs  keys.rs  lib.rs  verify.rs
crates/nilbox-blocklist/src/sources/: mod.rs  oisd.rs  urlhaus.rs
crates/nilbox-blocklist/tests/: integration.rs
crates/nilbox-core/: Cargo.toml  build.rs  todo-service-review.md  todo-service-review2.md
crates/nilbox-core/src/: config.rs  config_store.rs  control_client.rs  events.rs  lib.rs  service.rs  state.rs  validate.rs  vm_install.rs
crates/nilbox-core/src/audit/: mod.rs
crates/nilbox-core/src/file_proxy/: handler.rs  mod.rs  path_manager.rs  protocol.rs
crates/nilbox-core/src/gateway/: cdp_rewriter.rs  forwarder.rs  listener.rs  mod.rs
crates/nilbox-core/src/keystore/: lazy_store.rs  mod.rs  sqlite_store.rs
crates/nilbox-core/src/keystore/provider/: biometric_helper.m  keyring_provider.rs  macos_biometric.rs  mod.rs
crates/nilbox-core/src/mcp_bridge/: mod.rs
crates/nilbox-core/src/monitoring/: mod.rs
crates/nilbox-core/src/proxy/: api_key_gate.rs  auth_router.rs  dns_resolver.rs  domain_gate.rs  forward_proxy.rs  inspect.rs  llm_detector.rs  mod.rs  oauth_script_engine.rs  oauth_token_vault.rs  oauth_url_rewriter.rs  request_parser.rs  reverse_proxy.rs  token_extractor.rs  token_limit.rs  token_mismatch_gate.rs
crates/nilbox-core/src/proxy/auth_delegator/: aws_sigv4.rs  bearer.rs  mod.rs  scripted_oauth.rs  telegram.rs
crates/nilbox-core/src/recovery/: mod.rs
crates/nilbox-core/src/ssh/: client.rs  keys.rs  mod.rs
crates/nilbox-core/src/ssh_gateway/: mod.rs
crates/nilbox-core/src/store/: auth.rs  challenge.rs  client.rs  envelope.rs  keys.rs  mod.rs  pinning.rs  verify.rs  version_check.rs
crates/nilbox-core/src/token_monitor/: mod.rs
crates/nilbox-core/src/vm_platform/: apple.rs  mod.rs  qemu.rs
crates/nilbox-core/src/vsock/: apple.rs  async_adapter.rs  linux_vsock.rs  mod.rs  named_pipe.rs  protocol.rs  stream.rs
crates/nilbox-mcp-bridge/: Cargo.toml
crates/nilbox-mcp-bridge/src/: main.rs
docs/: cla-consent-log.md  development.md  zero-token-architecture.md
nilbox-vmm/Sources/nilbox-vmm/: VmController.swift  main.swift
oauth-scripts/: README.md  github.rhai  google.rhai  openai.rhai
scripts/: README.md  build-debian-image-linux.sh  build-debian-image-macos.sh  build-debian-image-win.sh  build-qemu-linux.sh  build-qemu-windows.sh  fetch-qemu-binaries.sh  mannual-vm-install.md
scripts/mcp/: README.md  mcp-server-sample.py  mcp-stdio-server-sample.py
scripts/playwright-mcp-hello/: README.md  hada-news.mjs  hn-title.mjs  index.mjs  mcp-config.json  package.json  test-cdp.mjs  test-cdp.txt
vm-agent/: .gitattributes  Cargo.toml  Dockerfile  build.rs  build.sh  build.win.sh
vm-agent/src/: app_install.rs  main.rs  utils.rs
vm-agent/src/fuse/: cache.rs  dispatcher.rs  filesystem.rs  mod.rs  protocol.rs
vm-agent/src/inbound/: control.rs  handler.rs  mod.rs
vm-agent/src/inbound/control/: file_ops.rs  system_ops.rs
vm-agent/src/outbound/: browser_hook.rs  dns.rs  mod.rs  proxy.rs
vm-agent/src/vsock/: linux.rs  mod.rs  protocol.rs  stream.rs  virtio_serial.rs
