[package]
name = "vm-agent"
description = "nilbox VM Guest Agent"
version = "0.1.8"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.2"
base64 = "0.21"
aes-gcm = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[features]
default = []
dev-store = []
with-fuse = ["fuser"]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.5"
libc = "0.2"
tracing-appender = "0.2"
fuser = { version = "0.14", optional = true }

[[bin]]
name = "vm-agent"
path = "src/main.rs"

[[bin]]
name = "nilbox-install"
path = "src/bin/install.rs"

[[bin]]
name = "mcp-stdio-proxy"
path = "src/bin/mcp_stdio_proxy.rs"
