[package]
name = "nilbox-mcp-bridge"
description = "nilbox MCP Bridge — stdio ↔ TCP relay for Claude Desktop integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nilbox-mcp-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
