[package]
name = "nilbox"
description = "nilbox — Secure VM Sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nilbox-core = { path = "../../../crates/nilbox-core" }
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-http = "2"
tauri-plugin-localhost = "2"
tauri-plugin-notification = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }

[lints.rust]
unexpected_cfgs = "allow"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-user-notifications = { version = "0.3", default-features = false, features = ["std", "UNUserNotificationCenter", "UNNotificationContent", "UNNotificationRequest", "UNNotificationTrigger", "block2", "bitflags"] }
block2 = "0.6"
